--- a/style.css
+++ b/style.css
@@ -27,18 +27,18 @@ body
 }
     
 
-h1
+h1,h2
 {
 	font-size: 1.3em;
 	font-weight: 900;
 }
 
-h2
+h3
 {
     font-size: 1.1em;
 }
 
-h3
+h4
 {
     font-size: 1em;
 }
@@ -73,35 +73,44 @@ body header img
 /* Navigation ///////////////////////////////////////////////////////////////////////////////////*/
 
 
+nav
+{
+    display: flex;
+    justify-content: flex-end;
+    margin: 0 50px 0 0;
+}
+
 nav ul
 {
     list-style-type: none;
     display: flex;
-    margin-right: 20px;
-    margin-bottom: 41px;
+    margin: 0 30px 0 0;  
 }
 
-nav a
+
+nav ul li a
 {
     font-size: 1em;
     color: black;
     padding: 0px 30px 0 30px;
-    text-decoration: none;
+    margin: 0px 0px 40px 0;
+    text-decoration: none;  
 }
 
-nav a:hover
+nav ul li a:hover
 {
     color: #0065FC;
     border-top: 3px solid #0065FC;
-    padding-top: 42px;
+    padding-top: 43px;
 }
 
 #style_inscrire
 {
     font-weight: bold;
     color: #0065FC;
+    text-decoration: none;
+    margin: 0px 0px 40px 0;
 }
-
 
 
 /* Corps /////////////////////////////////////////////////////////////////////////////////*/
@@ -159,6 +168,11 @@ section#section1 p
     left: -8px;
 }
 
+.bouton_min
+{
+    display: none;
+}
+
 
 
 #filtres
@@ -167,19 +181,18 @@ section#section1 p
     justify-content: flex-start;
     align-items: center;
     list-style-type: none;
-    width: ;
     margin: 0px 0 0px 0;
     padding: 5px 0px 5px 0;
 }
 
 #filtres li
 {
-    margin: 0 50px 0 0;
+    display: flex;
 }
 
-#filtres li h2
+#filtres li h3
 {
-    padding: 0 0 5px 0;
+    padding: 0 0px 0 0;
 }
 
 #filtres li a
@@ -189,8 +202,8 @@ section#section1 p
     font-weight: bold;
     border: 3px solid #F2F2F2;
     border-radius: 100px;
-    padding: 10px 0 10px 0;
-    margin: 0;
+    padding: 10px 0 6px 0;
+    margin: 0 0 0 50px;
 }
 
 #filtres li a:hover
@@ -250,6 +263,15 @@ section#section1 p
     padding: 0 50px 0 50px;
 }
 
+section#section2 > h2
+{
+    display: none;
+}
+
+section#section2 li p span
+{
+    font-weight: bold;
+}
 
 /* Corps ////// SECTION 2 //////HEBERGEMENTS///////////////////////////////////////////////*/
 
@@ -282,8 +304,9 @@ section#section2 article ul li a
     color: black;
 }
 
-li.hebergements a h3
+li.hebergements a figcaption
 {
+    font-weight: bold;
     margin: 10px 30px 0 20px;
 }
 
@@ -342,42 +365,26 @@ section#section2 aside
     padding: 20px 0px 0px 0px;
 }
 
-section#section2 aside ul li a 
-{
-    text-decoration: none;
-    color: black;
-}
 
 section#section2 aside ul li figure
 {
-    width: 130px;
-    height: ;
+    width: 60%;
     margin: 0;
     padding: 0;
     overflow: hidden;
 }
 
 section#section2 aside ul li figure img
-{
-   max-height: 200px;
+{ 
+   max-height: 150%;
    border-radius: 15px 0px 0 15px;
 }
 
-section#section2 aside h1
+section#section2 aside h2
 {
     display: flex;
     justify-content: space-between;
     padding: 0 35px 0 35px;
-}
-
-li.populaires a h3,p,ul.stars
-{
-    margin: 10px 30px 0 20px;
-}
-
-li.populaires ul.stars
-{
-    padding: 30px 0 0 0;
 }
 
 #populaires_block
@@ -401,6 +408,28 @@ li.populaires ul.stars
     overflow: hidden;
 }
 
+.populaires_block_text
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-decoration: none;
+    color: black;
+    margin: 0px 10px 5px 20px;
+    width: 300px;
+}
+
+.populaires_text
+{
+    margin: 5px 10px 0 0;
+}
+
+li.populaires a div h4,p
+{
+    margin: 10px 0px 0 0px;
+}
+
+
 
 
 /* Corps ////// SECTION 3 - ACTIVITES ////////////////////////////////////////////////////////*/
@@ -413,59 +442,78 @@ li.populaires ul.stars
 }
 
 #activites_block
-{
-    display: flex;
-    justify-content: space-between;
+{ 
     list-style-type: none;
-    margin: 0;
+    margin: auto;
     padding: 10px 0 0 0;
-    max-height: 500px;
-}
-
-.activites
-{
-    width: 23%;
-    border-radius: 20px;
-    overflow: hidden;
-    box-shadow: 0px 1px 10px silver;
-}
-
-
-.activites figure img
-{
     height: 450px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-gap: 40px;
 }
 
-.activites figure figcaption
+#activites_block figure
 {
-    font-weight: bold;
-    padding: 12px 0 12px 20px;
-}
-
-.activites2
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 23%;
-    
-}
-
-.activites2 figure
-{
-    height: 45%;
+    position: relative;
+    max-height: 450px;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 1px 10px silver;
-    position: relative;
+    margin: 0;
+    padding: 0;
 }
 
-.activites2 figure img
+#activites_block figure:first-child
 {
-    width: 100%;
+    grid-column: 1;
+    grid-row: 1 / 3;
 }
 
-.activites2 figure figcaption
+#activites_block figure:nth-child(2)
+{
+    grid-column: 2;
+    grid-row: 1;
+}
+
+#activites_block figure:nth-child(3)
+{
+    grid-column: 2;
+    grid-row: 2;
+}
+
+#activites_block figure:nth-child(4)
+{
+    grid-column: 3;
+    grid-row: 1 / 3;
+}    
+
+#activites_block figure:nth-child(5)
+{
+    grid-column: 4;
+    grid-row: 1;
+}
+
+#activites_block figure:nth-child(6)
+{
+    grid-column: 4;
+    grid-row: 2;
+}
+
+
+#activites_block figure a
+{
+    text-decoration: none;
+    color: black;
+}
+
+
+#activites_block figure img
+{
+    max-height: 120%;
+}
+
+#activites_block figure figcaption
 {
     width: 100%;
     font-weight: bold;
@@ -473,21 +521,7 @@ li.populaires ul.stars
     background-color: white;
     position: absolute;
     bottom: 0px;
-    
 }
-
-section#section3 figure
-{
-    margin: 0;
-}
-
-section#section3 ul li figure a
-{
-    text-decoration: none;
-    color: black;
-}
-
-
 
 
 .stars 
@@ -497,7 +531,6 @@ section#section3 ul li figure a
     margin: 0;
     padding: 0;
 }
-
 
 .fa-star 
 {
@@ -570,6 +603,420 @@ footer
 
 
 
-/*Media queries*/
+/*////   Media queries   /////////////////////////////////////////////////////////////////////////////////////*/
+
+/*////    PHONE   ///////////////////////////////////////////////////////////////////////////////////////////*/
 
 
+@media (max-width: 575.98px)
+{
+
+
+
+   
+    header
+    {
+        justify-content: flex-start;
+        align-items: flex-start;
+        padding: 0px 0px 0 0px;
+        width: auto;
+        flex-direction: column; 
+    }
+
+    body header img
+    {
+        padding: 35px 0 0px 20px;
+    }
+
+    h1,h2
+    {
+        font-size: 1.4em;
+    }
+
+/*////////////////////////////////////////////*/    
+
+   
+
+    nav
+    { 
+        margin: 0 0 0 0;
+        width: 100%;
+        flex-direction: column-reverse;
+        align-items: flex-end;
+    }
+
+    nav ul
+    {
+        margin: 0 0px 0 0;  
+        justify-content: center;
+        width: 100%;
+        flex-wrap: nowrap;
+    }
+
+    nav ul li
+    {
+        border-bottom: 4px solid #F2F2F2;
+        width: 100%;
+        padding: 0 0px 15px 0px;
+        text-align: center;
+    }
+
+
+    nav ul li a
+    { 
+        border-bottom: 0px solid #F2F2F2;
+        padding: 0;
+    }
+
+    nav ul li:hover
+    {
+        color: #0065FC;
+        border-top: 0px;
+        padding-top: 0px;
+        border-bottom: 4px solid #0065FC;
+        padding-bottom: 15px;
+    }
+
+    nav ul li a:hover
+    {
+        border-top: 0px;
+        padding-top: 0px;
+    }
+
+    #style_inscrire
+    {
+        margin: -30px 20px 40px 0;
+    }
+
+/*////////////////////////////////////////////*/
+
+    #section1
+    {
+        width: auto;
+        padding: 20px 20px 0px 20px;
+    }
+
+
+/*////////////////////////////////////////////*/
+
+    .formulaire
+    {
+         width: 100%;
+         display: flex;
+         justify-content: space-between;
+         margin: 0 0 20px 0;
+    }
+
+    .champ
+    {
+        width: 100%;
+    }
+
+
+    .bouton
+    {
+        display: none;
+    }
+
+    .bouton_min
+    {
+        display: block;
+        font-size: 1em;
+        color: white;
+        background-color: #0065FC;
+        border-radius: 15px 15px 15px 15px;
+        border: 1px solid #0065FC;
+        padding: 14px 18px 14px 18px;
+        position: relative;
+        left: -10px;
+        width: auto;
+    }
+
+
+
+/*////////////////////////////////////////////*/
+    
+
+    #filtres
+    {
+        width: auto;
+        justify-content: space-between;
+        align-items: stretch;
+        flex-wrap: wrap;
+        padding: 0;
+        margin: 0;
+    }
+
+    #filtres li a
+    {
+       margin: 0 0px 10px 0;
+    }
+
+    #filtres li h3
+    {
+        padding: 0 250px 0 0;
+    }
+
+
+/*////////////////////////////////////////////*/
+
+
+    #section2
+    {
+        flex-direction: column-reverse;
+        align-items: center;
+        width: auto;
+        padding: 0;
+    }
+
+/*////////////////////////////////////////////*/    
+
+    section#section2 article
+    {
+        width: auto;
+        padding: 15px 20px 0 20px;
+        background-color: white;
+        border-radius: 0px;
+    }
+
+    #hebergements_block
+    {
+        flex-direction: column;
+    }
+
+    .hebergements
+    {
+        width: auto;
+        margin: 0 0 15px 0;
+    }
+    
+/*////////////////////////////////////////////*/
+
+
+    section#section2 aside
+    {
+        width: 100%;
+        border-radius: 0px;
+    }
+
+    section#section2 aside h2
+    {
+        padding: 0  20px 0 20px;
+    }
+
+    #populaires_block
+    {
+        width: auto;
+        margin: 0 20px 20px 20px;
+    }
+
+    .populaires
+    {
+        margin: 0 0 15px 0;    
+    }
+
+
+/*////////////////////////////////////////////*/
+    
+    #section3
+    {
+        width: auto;
+        padding: 20px 20px 50px 20px;
+
+    }
+
+    #activites_block
+    {
+        width: auto;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        grid-gap: 25px;
+    }
+
+    #activites_block figure
+    {
+        position: relative;
+        height: 190px;
+    }
+
+    #activites_block figure img
+    {
+        max-height: none;
+        width: 100%;
+    }
+
+  
+
+/*////////////////////////////////////////////*/
+
+    footer
+    {
+        width: auto; 
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    #footer_block
+    {
+
+        flex-direction: column;
+        
+
+    }
+
+    footer ul#footer_block li
+    {
+        width: auto; 
+
+    }
+
+}
+
+
+
+
+/*///////////////////////////////////////////////////////////////////////////////////*/
+/*////    TABLETTE     //////////////////////////////////////////////////////////////*/
+
+
+@media (min-width: 576px) and (max-width: 1199.98px)
+{
+
+
+    header
+    {
+        padding: 0px 0px 0 40px;
+        width: auto; 
+    }
+
+/*///////////////////////////////////////////*/
+/*///////////////////////////////////////////*/
+
+    #filtres
+    {
+        padding: 0px 0px 0px 0;
+        width: auto;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        float: none;
+    }
+
+    #filtres li
+    {
+        margin: 0 0 10px 0;
+    }
+
+
+    #filtres li a
+    {
+        margin: 0 0 0px 0px;
+    }
+
+
+
+/*///////////////////////////////////////////*/
+/*///////////////////////////////////////////*/
+        
+        #section2
+    {
+        justify-content: space-between;
+        
+        flex-direction: column-reverse;
+        padding: 0 20px 0 20px;
+        width: auto;
+    }
+
+/*///////////////////////////////////////////*/
+/*///////////////////////////////////////////*/
+
+
+    section#section2 article
+    {
+        padding: 20px 20px 0px 20px;
+        width: auto;   
+    }
+
+
+    #hebergements_block
+    {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        padding: 0;
+        
+        margin: 0 0 -20px 0;
+    }
+
+
+/*///////////////////////////////////////////*/
+/*///////////////////////////////////////////*/
+    
+
+    section#section2 aside
+    {
+        width: auto;
+        padding: 20px 10px 0px 10px;
+        margin: 0 0 30px 0;
+    }
+
+    section#section2 aside h2
+    { 
+        padding: 0 10px 0 10px;
+    }
+
+    #populaires_block
+    {
+        flex-direction: row;
+    }
+
+    .populaires
+    {
+        height: 150px;
+        margin: 0 5px 30px 5px;
+    }
+
+    .populaires_text
+    {
+        margin: 5px 5px 0 0;
+    }
+
+    li.populaires a div h4,p
+    {
+        margin: 5px 0px 0 0px;
+    }
+
+
+/*///////////////////////////////////////////*/
+/*///////////////////////////////////////////*/
+
+    #section3
+    {
+        width: auto;
+        padding: 20px 40px 50px 40px;
+
+    }
+
+    #activites_block
+    {
+        width: auto;
+        height: auto;
+        display: flex;
+        justify-content: space-between;
+        grid-gap: 25px;
+        flex-wrap: wrap;
+    }
+
+    #activites_block figure
+    {
+        
+        height: 190px;
+        width: 46%;
+    }
+
+    #activites_block figure img
+    {
+        max-height: none;
+        width: 100%;
+    }
+}
